Fix the pom.xml to avoid build break with JDK 1.4. The issue was reported by sebb on the review of the RC3
git-svn-id: https://svn.apache.org/repos/asf/incubator/tuscany/branches/sdo-1.1-incubating@642379 13f79535-47bb-0310-9956-ffa450edef68