@@ -1,21 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
- * Licensed to the Apache Software Foundation (ASF) under one
- * or more contributor license agreements.  See the NOTICE file
- * distributed with this work for additional information
- * regarding copyright ownership.  The ASF licenses this file
- * to you under the Apache License, Version 2.0 (the
- * "License"); you may not use this file except in compliance
- * with the License.  You may obtain a copy of the License at
- *
- *   http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing,
- * software distributed under the License is distributed on an
- * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
- * KIND, either express or implied.  See the License for the
- * specific language governing permissions and limitations
- * under the License.
+    * Licensed to the Apache Software Foundation (ASF) under one
+    * or more contributor license agreements.  See the NOTICE file
+    * distributed with this work for additional information
+    * regarding copyright ownership.  The ASF licenses this file
+    * to you under the Apache License, Version 2.0 (the
+    * "License"); you may not use this file except in compliance
+    * with the License.  You may obtain a copy of the License at
+    *
+    *   http://www.apache.org/licenses/LICENSE-2.0
+    *
+    * Unless required by applicable law or agreed to in writing,
+    * software distributed under the License is distributed on an
+    * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
+    * KIND, either express or implied.  See the License for the
+    * specific language governing permissions and limitations
+    * under the License.
 -->
 <project>
     <modelVersion>4.0.0</modelVersion>
@@ -29,7 +29,7 @@
     <packaging>pom</packaging>
     <name>Apache Tuscany SDO Implementation Project</name>
     <version>1.1-incubating</version>
-    
+
     <scm>
         <connection>scm:svn:http://svn.apache.org/repos/asf/incubator/tuscany/java/sdo</connection>
         <developerConnection>scm:svn:https://svn.apache.org/repos/asf/incubator/tuscany/java/sdo</developerConnection>
@@ -61,9 +61,9 @@
         </repository>
         <repository>
             <!-- <id>eclipse.emf</id>
-            <url>http://download.eclipse.org/tools/emf/maven2</url> -->
+                <url>http://download.eclipse.org/tools/emf/maven2</url> -->
             <!-- <id>osuosl.org</id>
-            <url>http://ftp.osuosl.org/pub/eclipse/tools/emf/maven2</url> -->
+                <url>http://ftp.osuosl.org/pub/eclipse/tools/emf/maven2</url> -->
             <!-- temporarily using indiana state univ as eclipse site diesnt have 2.2.2 at the moment -->
             <id>indiana</id>
             <url>http://ftp.ussg.iu.edu/eclipse/modeling/emf/emf/maven2/</url>
@@ -122,9 +122,13 @@
                 <module>java5tools</module>
             </modules>
         </profile>
-        
-	<profile>
+
+        <profile>
             <id>java_1_4_maven</id>
+            <activation>
+                <jdk>1.4</jdk>
+            </activation>
+
             <modules>
                 <module>sdo-api</module>
                 <module>lib</module>
@@ -134,11 +138,18 @@
                 <module>sample</module>
                 <module>distribution</module>
             </modules>
-        </profile>        
+        </profile>
     </profiles>
 
     <build>
         <defaultGoal>install</defaultGoal>
+
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>true</filtering>
+            </resource>
+        </resources>
 
         <plugins>
             <plugin>
@@ -154,17 +165,18 @@
                 <version>2.3</version>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
+                    <argLine>-Djava.endorsed.dirs=${java.endorsed.dirs}</argLine>
                     <includes>
                         <include>**/*TestCase.java</include>
                     </includes>
                 </configuration>
             </plugin>
-            
-               
+
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-assembly-plugin</artifactId>
-                <version>2.2-SNAPSHOT</version>
+                <version>2.2-beta-2</version>
                 <configuration>
                     <descriptors>
                         <descriptor>sdo.xml</descriptor>
@@ -175,16 +187,16 @@
 
         <pluginManagement>
             <plugins>
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-javadoc-plugin</artifactId>
-					<version>2.2</version>
-					<configuration>
-						<aggregate>true</aggregate>
-						<version>2.0</version>
-						<source>1.4</source>
-					</configuration>
-				</plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-javadoc-plugin</artifactId>
+                    <version>2.2</version>
+                    <configuration>
+                        <aggregate>true</aggregate>
+                        <version>2.0</version>
+                        <source>1.4</source>
+                    </configuration>
+                </plugin>
             </plugins>
         </pluginManagement>
 
